--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
-body {
+.week-1 {
   background-color: #011C26;
   color: #F4CB64;
   display: flex;
   font-family: 'Lato', sans-serif;
   letter-spacing: .1em;
+  width: 100vw;
+  height: 680px;
 }
 
 section {
